# cpp-skeleton

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.yml  .cppcheck  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yml  .travis.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  LICENSE  README  README.md  conanfile.txt
.github/: AUTHORS.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yaml  build-linux-clang.yml  build-linux-gcc.yml  build.yaml  build.yml  ci-arch.yaml  ci-cmake.yaml  ci-conan.yaml  (+6 more)
docs/: Doxyfile.in
image/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  conanfile.py
image/cmake/modules/: Init.cmake  OutputSystemInformation.cmake
image/cmake/toolchains/: override-msvc.cmake  toolchain-clang.cmake
image/include/image/: image.hpp
image/integration/: CMakeLists.txt  conanfile.py  integration.cpp
image/src/: CMakeLists.txt  image.cpp
image/tests/: CMakeLists.txt  image_tests.cpp  path_helpers.hpp
imagelib/: CMakeLists.txt  conanfile.py  name.txt
imagelib/cmake/: Configure.cmake
imagelib/cmake/modules/: CCacheConfig.cmake  CPackConfig.cmake
imagelib/cmake/toolchains/: override-gcc.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake
imagelib/include/imagelib/: image_buffer.hpp  image_loader.hpp  paths.hpp
imagelib/integration/: CMakeLists.txt  conanfile.py  integration.cpp
imagelib/src/: CMakeLists.txt  image_loader.cpp  paths.cpp  tj_helpers.hpp
imagelib/tests/: CMakeLists.txt  image_buffer_tests.cpp  image_loader_tests.cpp  path_tests.cpp
imageutils/: .clang-format  .clang-format-ignore  .clang-tidy-ignore  .cmake-linter.yml  .travis.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  conanfile.py  conanfile.txt  linux  mac  windows
imageutils/benchmarks/: CMakeLists.txt  benchmarks.cpp
imageutils/cmake/: BuildConfig.cmake  BuildPaths.cmake  CCacheConfig.cmake  CPackConfig.cmake  Configure.cmake  Coverage.cmake  Init.cmake  InstallPaths.cmake  Packaging.cmake  Sanitize.cmake  Sanitizer.cmake  Sanitizing.cmake  SearchPaths.cmake
imageutils/cmake/config/: imageutils-config.cmake.in
imageutils/cmake/modules/: CCacheConfig.cmake  CPackConfig.cmake  CodeCoverage.cmake  ProjectOptions.cmake  ProjectSetup.cmake  SanityChecks.cmake  StaticChecks.cmake
imageutils/cmake/presets/: build-preset.json  build-presets.json  feature-presets.json  generator-presets.json  option-preset.json  platform-presets.json  standalone-presets.json  toolchain-preset.json  toolchain-presets.json
imageutils/cmake/toolchains/: overrides-clang.cmake  overrides-gcc.cmake  overrides-msvc.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-linux-arm.cmake  toolchain-linux-arm64.cmake  toolchain-linux-i386.cmake  toolchain-linux-mips.cmake  toolchain-linux-mips64.cmake  toolchain-linux-powerpc.cmake  toolchain-linux-ppc64.cmake  toolchain-linux-s390x.cmake  toolchain-linux-x86_64.cmake  toolchain-macosx-arm64.cmake  toolchain-macosx-x86_64.cmake  toolchain-msvc.cmake  toolchain-windows-arm.cmake  toolchain-windows-arm64.cmake  toolchain-windows-x86.cmake  toolchain-windows-x86_64.cmake
imageutils/cmake/toolchains/compilers/: toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake
imageutils/doc/: CMakeLists.txt  Doxyfile.in
imageutils/docker/: Dockerfile.aarch64.ubuntu_latest  Dockerfile.arm.ubuntu_latest  Dockerfile.arm32v7.ubuntu_latest  Dockerfile.arm64.ubuntu_latest  Dockerfile.arm64v8.ubuntu_latest  Dockerfile.powerpc.ubuntu_latest  Dockerfile.ppc.ubuntu_latest  Dockerfile.ppc64.ubuntu_latest  Dockerfile.ppc64le.ubuntu_latest  Dockerfile.s390x.ubuntu_latest
imageutils/docs/: CMakeLists.txt  Doxyfile.in  main.dox
imageutils/include/imageutils/: JPEG.hpp  JPEGFilter.hpp  JPEGImage.hpp  JPEGProcessor.hpp  JPEGReader.hpp  JPEGWriter.hpp  JPEG_Filter.hpp  JPEG_Image.hpp  JPEG_Processing.hpp  JPEG_Processor.hpp  color.hpp  image.hpp  image_filters.hpp  image_processor.hpp
imageutils/include/imageutils/filters/: JPEGBrightness.hpp  JPEGContrast.hpp  JPEGFlipH.hpp  JPEGFlipV.hpp  JPEGGrayscale.hpp  JPEGInvert.hpp  JPEGResize.hpp  JPEG_Brightness.hpp  JPEG_Contrast.hpp  JPEG_FlipH.hpp  JPEG_FlipV.hpp  JPEG_Grayscale.hpp  JPEG_Invert.hpp  JPEG_Resize.hpp  brightness.hpp  contrast.hpp  grayscale.hpp  horizontal_flip.hpp  invert_colors.hpp  resize.hpp  vertical_flip.hpp
imageutils/include/imageutils/internal/: JPEG_Filter.hpp  JPEG_Image.hpp  JPEG_Processor.hpp  JPEG_Reader.hpp  JPEG_Writer.hpp
imageutils/integration/: CMakeLists.txt  conanfile.py  integration.cpp
imageutils/src/: CMakeLists.txt  JPEGProcessor.cpp  JPEGReader.cpp  JPEGWriter.cpp  JPEG_Image.cpp  JPEG_Reader.cpp  JPEG_Writer.cpp  image.cpp  image_processor.cpp
imageutils/src/filters/: JPEG_Brightness.cpp  JPEG_Contrast.cpp  JPEG_FlipH.cpp  JPEG_FlipV.cpp  JPEG_Grayscale.cpp  JPEG_Invert.cpp  JPEG_Resize.cpp  brightness.cpp  contrast.cpp  grayscale.cpp  horizontal_flip.cpp  invert_colors.cpp  resize.cpp  vertical_flip.cpp
imageutils/tests/: CMakeLists.txt  JPEG_ImageFilterTests.cpp  JPEG_ProcessorTests.cpp  JPEG_ReaderTests.cpp  JPEG_WriterTests.cpp  ResourcePath.hpp  image_filter_tests.cpp  image_processor_tests.cpp  jpeg_read_tests.cpp  jpeg_write_tests.cpp  resource_path.hpp
imageutils/tests/integration/: CMakeLists.txt  integration.cpp
imageutils/tests/unit_tests/: CMakeLists.txt  JPEGImageFilterTests.cpp  JPEGProcessorTests.cpp  JPEGReaderTests.cpp  JPEGWriterTests.cpp
src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PNGProcessor.cpp  PNGProcessor.vcxproj  PNGProcessor.vcxproj.filters  PNGProcessorConfig.h.in  PNGProcessorConfigVersion.h.in  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
tests/integration/: CMakeLists.txt  integration.cpp
tests/unit_tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unit_tests.cpp  unit_tests.vcxproj  unit_tests.vcxproj.filters  unit_tests[1]_include.cmake
(+21 files in other folders)
